# RA2_Datalake_LinaresJoan

./: .gitignore  README.md  main.py  pyproject.toml  test_connection.py
src/S3/: __init__.py  upload_datalake_s3.py  volumetry_report.json
src/extractor/: __init__.py  extract_gaming_data.py  extractor_polymarket.py
src/utils/: __init__.py  spark_cleaner.py  transformer_data.py  validator_warehouse.py
src/warehouse/: __init__.py  loader_NeonDB.py
